# nuke-to-hydra

./: CMakeLists.txt  README.md
cmake/: FindNuke.cmake  FindTBB.cmake  FindUSD.cmake
src/: menu.py
src/HydraLightOps/: CMakeLists.txt  HydraCylinderLight.cpp  HydraDiskLight.cpp  HydraDomeLight.cpp  HydraRectLight.cpp  HydraSphereLight.cpp
src/HydraRenderOp/: CMakeLists.txt  HydraRender.cpp
src/HydraSceneOp/: CMakeLists.txt
src/StormGLViewerOp/: CMakeLists.txt  StormGLViewer.cpp
src/hdNuke/: CMakeLists.txt  adapter.h  delegateConfig.cpp  delegateConfig.h  geoAdapter.cpp  geoAdapter.h  hydraOpManager.cpp  hydraOpManager.h  instancerAdapter.cpp  instancerAdapter.h  knobFactory.cpp  knobFactory.h  lightAdapter.cpp  lightAdapter.h  lightOp.cpp  lightOp.h  materialAdapter.cpp  materialAdapter.h  opBases.cpp  opBases.h  primOpManager.cpp  primOpManager.h  renderStack.cpp  renderStack.h  sceneDelegate.cpp  sceneDelegate.h  sharedState.h  tokens.cpp  tokens.h  types.h  utils.cpp  utils.h  vtValueKnobCache.cpp  vtValueKnobCache.h
src/ops/: CMakeLists.txt  HydraCylinderLight.cpp  HydraDiskLight.cpp  HydraDomeLight.cpp  HydraRectLight.cpp  HydraRender.cpp  HydraScene.cpp  HydraSphereLight.cpp  HydraUSDStage.cpp
